[package]
name = "evalvana"
version = "0.1.0-alpha.1"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/evalvana"
description = "An early WIP REPL environment for any language with a plugin."
readme = "README.md"
license = "OSL-3.0"
edition = "2018"

[dependencies]
iced = "0.3"
iced_futures = { version = "0.3", features = ["tokio"] }
tokio = { version = "1.10", features = ["process", "io-util", "fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util", "fs"] }
futures = { version = "0.3", features = ["executor"] }
dirs = "4.0"
evalvana-api = { path = "./plugins/api" }
serde = "1.0"
serde_json = "1.0"
getrandom = "0.2"
lazy-regex = "2.2"
env_logger = "0.9"
anyhow = "1.0"

[workspace]
members = ["plugins/cargo"]
