[package]
name = "evalvana"
version = "0.1.0-alpha.1"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/evalvana"
description = "An early WIP REPL environment for any language with a plugin."
readme = "README.md"
license = "OSL-3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "4.0"
env_logger = "0.9"
evalvana-api = { path = "./plugins/api" }
evalvana-editor = { path = "./editor" }
futures = { version = "0.3", features = ["executor"] }
getrandom = "0.2"
iced = { version = "0.4", features = ["tokio"] }
iced_futures = { version = "0.4", features = ["tokio"] }
iced_native = "0.5"
lazy-regex = "2.2"
png = "0.17"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.10", features = ["process", "io-util", "fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util", "fs"] }
which = "4.2"

[workspace]
members = ["editor", "plugins/cargo", "plugins/api"]
