[package]
name = "evalvana-editor"
version = "0.1.0-alpha.1"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/evalvana"
description = "Iced text editing widget for Evalvana"
license = "MIT"
edition = "2021"

[dependencies]
iced_graphics = { git = "https://github.com/iced-rs/iced" }
iced_native = { git = "https://github.com/iced-rs/iced" }
ordered-float = "2.10"
ropey = "1.4"
unicode-segmentation = "1.6"
