[package]
name = "evalvana-editor"
version = "0.1.0-alpha.1"
authors = ["ThatsNoMoon <git@thatsnomoon.dev>"]
repository = "https://github.com/ThatsNoMoon/evalvana"
description = "Iced text editing widget for Evalvana"
license = "MIT"
edition = "2021"

[dependencies]
iced_graphics = "0.3"
iced_native = "0.5"
ordered-float = "3.0"
ropey = "1.4"
unicode-segmentation = "1.6"
